--- a/package.json
+++ b/package.json
@@ -6,20 +6,27 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test:once": "vitest run",
-    "test": "vitest",
-    "coverage": "vitest run --coverage",
     "prepare": "husky install",
     "lint": "eslint .",
     "format:check": "prettier --check .",
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@nextui-org/slider": "^2.2.17",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
+    "rehype": "^13.0.2",
+    "rehype-highlight": "^4.1.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-react": "^8.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-rehype": "^11.1.1",
+    "rsuite": "^5.74.1",
     "styled-components": "^5.3.10",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
