--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "test:once": "vitest run",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "prepare": "husky install",
     "lint": "eslint .",
     "format:check": "prettier --check .",
@@ -17,6 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
+    "react-router": "^7.0.1",
+    "react-router-dom": "^7.0.1",
     "rehype": "^13.0.2",
     "rehype-highlight": "^4.1.0",
     "rehype-raw": "^7.0.0",
