--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@nextui-org/slider": "^2.2.17",
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
