--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,12 +5,12 @@ on:
     branches:
       - main
 env:
-  VITE_FIRSTNAME: true
-  VITE_LASTNAME: true
-  VITE_LASTFMAPIKEY: true
-  VITE_LASTFMUSERNAME: true
-  VITE_GUESTBOOKURL: true
-  VITE_CORSPROXYURL: true
+  VITE_FIRSTNAME: ${{ secrets.VITE_FIRSTNAME }}
+  VITE_LASTNAME: ${{ secrets.VITE_LASTNAME }}
+  VITE_LASTFMAPIKEY: ${{ secrets.VITE_LASTFMAPIKEY }}
+  VITE_LASTFMUSERNAME: ${{ secrets.VITE_LASTFMUSERNAME }}
+  VITE_GUESTBOOKURL: ${{ secrets.VITE_GUESTBOOKURL }}
+  VITE_CORSPROXYURL: ${{ secrets.VITE_CORSPROXYURL }}
 
 jobs:
   build:
