--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,16 +4,10 @@ on:
   push:
     branches:
       - main
-env:
-  VITE_FIRSTNAME: ${{ secrets.VITE_FIRSTNAME }}
-  VITE_LASTNAME: ${{ secrets.VITE_LASTNAME }}
-  VITE_LASTFMAPIKEY: ${{ secrets.VITE_LASTFMAPIKEY }}
-  VITE_LASTFMUSERNAME: ${{ secrets.VITE_LASTFMUSERNAME }}
-  VITE_GUESTBOOKURL: ${{ secrets.VITE_GUESTBOOKURL }}
-  VITE_CORSPROXYURL: ${{ secrets.VITE_CORSPROXYURL }}
 
 jobs:
   build:
+    environment: gh-pages
     name: Build
     runs-on: ubuntu-latest
 
@@ -29,6 +23,14 @@ jobs:
 
       - name: Build project
         run: npm run build
+        env:
+          VITE_FIRSTNAME: ${{ secrets.VITE_FIRSTNAME }}
+          VITE_LASTNAME: ${{ secrets.VITE_LASTNAME }}
+          VITE_LASTFMAPIKEY: ${{ secrets.VITE_LASTFMAPIKEY }}
+          VITE_LASTFMUSERNAME: ${{ secrets.VITE_LASTFMUSERNAME }}
+          VITE_GUESTBOOKURL: ${{ secrets.VITE_GUESTBOOKURL }}
+          VITE_CORSPROXYURL: ${{ secrets.VITE_CORSPROXYURL }}
+
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
